@@ -32,6 +32,7 @@
 #include "audio.h"
 #include "avfilter.h"
 #include "formats.h"
+#include "hermite.h"
 #include "internal.h"
 
 typedef struct SidechainCompressContext {
@@ -88,29 +89,6 @@ static av_cold int init(AVFilterContext *ctx)
     s->compressed_knee_stop = (s->knee_stop - s->thres) / s->ratio + s->thres;
 
     return 0;
-}
-
-static inline double hermite_interpolation(double x, double x0, double x1,
-                                           double p0, double p1,
-                                           double m0, double m1)
-{
-    double width = x1 - x0;
-    double t = (x - x0) / width;
-    double t2, t3;
-    double ct0, ct1, ct2, ct3;
-
-    m0 *= width;
-    m1 *= width;
-
-    t2 = t*t;
-    t3 = t2*t;
-    ct0 = p0;
-    ct1 = m0;
-
-    ct2 = -3 * p0 - 2 * m0 + 3 * p1 - m1;
-    ct3 = 2 * p0 + m0  - 2 * p1 + m1;
-
-    return ct3 * t3 + ct2 * t2 + ct1 * t + ct0;
 }
 
 // A fake infinity value (because real infinity may break some hosts)
