@@ -10,6 +10,7 @@ version <next>:
 - stereotools filter
 - rubberband filter
 - tremolo filter
+- agate filter
 
 
 version 2.8:
